--- a/stilus.css
+++ b/stilus.css
@@ -18,4 +18,15 @@ table{
     text-align: center;
     position: absolute;
     background-color: white;
+    width: 670px;
+}
+td{
+    margin: 2pt;
+}
+#t2{
+    width: 650px;
+}
+.ttd{
+    text-align: center;
+    
 }
