--- a/stilus.css
+++ b/stilus.css
@@ -16,7 +16,6 @@ a:active{
 }
 table{
     text-align: center;
-    position: absolute;
     background-color: white;
     width: 670px;
 }
@@ -35,5 +34,8 @@ td{
 }
 #story{
     color: white;
-    
+
+}
+.snd_row{
+
 }
