--- a/stilus.css
+++ b/stilus.css
@@ -18,6 +18,8 @@ table{
     text-align: center;
     background-color: white;
     width: 670px;
+    margin-left: auto;
+    margin-right: auto;
 }
 td{
     margin: 2pt;
@@ -36,6 +38,10 @@ td{
     color: white;
 
 }
+#cai-lun{
+    margin-left: auto;
+    margin-right: auto;
+}
 .snd_row{
-
+    text-decoration: underline;
 }
